...
                            .clip(CircleShape)
                    )
                    Column(Modifier.padding(start = dimensionResource(id = R.dimen.spacing_regular))) {
                        Text(text = speaker.name, style = MaterialTheme.typography.h6)
                        Text(text = speaker.company, style = MaterialTheme.typography.caption)
                        Button(onClick = { /*TODO*/ }) {
                            Text("Follow")
                        }
                    }
                }

                Divider(modifier = Modifier.padding(dimensionResource(id = R.dimen.spacing_regular)))

...
